html(base), css(some)

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,206 @@
 </head>
 
 <body>
-
+  <header class="header-main">
+    <div class="pre-menu">
+      <ul class="header-menu container">
+        <li class="header-menu-list"><a class="header-menu-item" href="#about" target="_self">about</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#discography" target="_self">discigraphy</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#concert" target="_self">concert trips</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#latter" target="_self">latter compositions</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#new-track" target="_self">new tracks</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#upcoming" target="_self">upcoming events</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#history" target="_self">history</a></li>
+        <li class="header-menu-list"><a class="header-menu-item" href="#contact" target="_self">contact</a></li>
+      </ul>
+    </div>
+  </header>
+  <main>
+    <section class="section-discography">
+      <header>
+        <h2>
+          <img src="img/discography-title.jpg" alt="discography">
+        </h2>
+        <p></p>
+      </header>
+      <ul class="disco-list container">
+        <li>
+          <div>
+            <p></p>
+          </div>
+          <div>
+            <h3></h3>
+            <p></p>
+            <img src="img/disco01.jpg" alt="">
+          </div>
+        </li>
+        <li>
+          <div>
+            <p></p>
+          </div>
+          <div>
+            <h3></h3>
+            <p></p>
+            <img src="img/disco02.jpg" alt="">
+          </div>
+        </li>
+        <li>
+          <div>
+            <p></p>
+          </div>
+          <div>
+            <h3></h3>
+            <p></p>
+            <img src="img/disco03.jpg" alt="">
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="section-concert">
+      <header>
+        <h2>
+          <img src="img/contact-title.jpg" alt="section-concert">
+        </h2>
+        <p></p>
+      </header>
+      <div class="container">
+        <p></p>
+      </div>
+      <div>
+        <h3></h3>
+        <p></p>
+        <a href="#">Buy online</a>
+      </div>
+    </section>
+    <section class="section-latter">
+      <header>
+        <h2>
+          <img src="img/latter-title.jpg" alt="latter compositions">
+        </h2>
+        <p></p>
+      </header>
+      <ul class="conyainer">
+        <li>
+          <div>
+            <p></p>
+            <h3></h3>
+            <p></p>
+            <a href="#">Visit the Tunes</a>
+          </div>
+          <img src="img/latter01.jpg" alt="">
+        </li>
+        <li>
+          <div>
+            <p></p>
+            <h3></h3>
+            <p></p>
+            <a href="#">Visit the Tunes</a>
+          </div>
+          <img src="img/latter02.jpg" alt="">
+        </li>
+        <li>
+          <div>
+            <p></p>
+            <h3></h3>
+            <p></p>
+            <a href="#">Visit the Tunes</a>
+          </div>
+          <img src="img/latter03.jpg" alt="">
+        </li>
+      </ul>
+    </section>
+    <section class="slider">
+      <h3></h3>
+      <p></p>
+      <p></p>
+    </section>
+    <section class="section-new-track">
+      <ul class="container">
+        <li>
+          <p></p>
+          <h3></h3>
+          <p></p>
+        </li>
+        <li>
+          <p></p>
+          <h3></h3>
+          <p></p>
+        </li>
+        <li>
+          <p></p>
+          <h3></h3>
+          <p></p>
+        </li>
+        <li>
+          <p></p>
+          <h3></h3>
+          <p></p>
+        </li>
+        <li>
+          <p></p>
+          <h3></h3>
+          <p></p>
+        </li>
+        <li>
+          <p></p>
+          <h3></h3>
+          <p></p>
+        </li>
+      </ul>
+    </section>
+    <section class="section-upcoming">
+      <header>
+        <h2>
+          <img src="img/Upcoming-title.jpg" alt="upcoming events">
+        </h2>
+        <h3></h3>
+        <p></p>
+        <p></p>
+        <h3></h3>
+        <p></p>
+        <p></p>
+      </header>
+    </section>
+    <section class="section-history">
+      <header>
+        <h2>
+          <img src="img/History-title.jpg" alt="history">
+        </h2>
+        <p></p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <p></p>
+      </header>
+    </section>
+    <section class="section-contact">
+      <header>
+        <h2>
+          <img src="img/contact-title.jpg" alt="contact">
+        </h2>
+        <p></p>
+        <div>
+          <form action="">
+            <input type="name">
+            <input type="email" name="" id="">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input type="button" value="">
+          </form>
+          <div class="icons">
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+      </header>
+    </section>
+  </main>
 </body>
 
 </html>
