--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,11 @@
   <main>
     <section class="discography">
       <header>
-        <h2 class="discography-title">Discography</h2>
-        <p class="discography-about">September 4 world heard Night Visions, the first full album. He reached the 2 position in the chart Billboard 200.
-          The single «It's Time» took 22 th place in the Billboard Hot 100, 4th in the Billboard Alternative and Billboard
+        <h2 class="discography-title">discography</h2>
+        <p class="discography-about">September 4 world heard Night Visions, the first full album. He reached the 2
+          position in the chart Billboard 200.
+          The single «It's Time» took 22 th place in the Billboard Hot 100, 4th in the Billboard Alternative and
+          Billboard
           Rock, and now went platinum.</p>
       </header>
       <ul class="disco-list container">
@@ -54,66 +56,81 @@
           <span class="Year-hell">2010</span>
           <h5 class="Hell-silence">Hell and Silence</h5>
           <h3 class="Hell-silence-title">Hell and Silence is an EP by Las Vegas rock group</h3>
-          <p class="Hell-silence-about">Hell and Silence is an EP by Las Vegas rock group , released in March 2010 in the United States. It was recorded
-            at Battle Born Studios. All songs were written by Imagine Dragons and self-produced. The EP was in part mixed
-            by Grammy nominated engineer Mark Needham. To promote the album the band performed five shows at SXSW 2010 including
-            at the BMI Official Showcase.While at SXSW they were endorsed by Blue Microphones. They also toured the western
-            United States with Nico Vega and Saint Motel. They also performed at Bite of Las Vegas Festival 2010, New Noise
+          <p class="Hell-silence-about">Hell and Silence is an EP by Las Vegas rock group , released in March 2010 in
+            the United States. It was recorded
+            at Battle Born Studios. All songs were written by Imagine Dragons and self-produced. The EP was in part
+            mixed
+            by Grammy nominated engineer Mark Needham. To promote the album the band performed five shows at SXSW 2010
+            including
+            at the BMI Official Showcase.While at SXSW they were endorsed by Blue Microphones. They also toured the
+            western
+            United States with Nico Vega and Saint Motel. They also performed at Bite of Las Vegas Festival 2010, New
+            Noise
             Music Festival, Neon Reverb Festival, and Fork Fest.</p>
           <img src="img/disco01.jpg" alt="">
-          </div>
         </li>
         <li>
           <span class="Year-visions">2012</span>
           <h5 class="Nihgt-visions">Night Visions</h5>
           <h3 class="Nihgt-visions-title">Night Visions is the debut studio album by American rock band</h3>
-          <p class="Nihgt-visions-about">It was released on September 4, 2012 through Interscope Records. The extended track was released on February 12,
-            2013, adding three more songs. Recorded between 2010 and 2012, the album was primarily produced by the band themselves,
-            as well as English hip-hop producer Alex da Kid and Brandon Darner from the American indie rock group The Envy
-            Corps. It was mastered by Joe LaPorta. According to frontman Dan Reynolds, the album took three years to finish
+          <p class="Nihgt-visions-about">It was released on September 4, 2012 through Interscope Records. The extended
+            track was released on February 12,
+            2013, adding three more songs. Recorded between 2010 and 2012, the album was primarily produced by the band
+            themselves,
+            as well as English hip-hop producer Alex da Kid and Brandon Darner from the American indie rock group The
+            Envy
+            Corps. It was mastered by Joe LaPorta. According to frontman Dan Reynolds, the album took three years to
+            finish
             ... of the album's tracks being previously released on multiple EPs. Musically, Night Visions exhibits </p>
           <img src="img/disco02.jpg" alt="">
-          </div>
         </li>
         <li>
           <span class="Year-smoke">2015</span>
           <h5 class="Year-smoke-mirrors">Smoke + Mirrors</h5>
-          <h3 class="Year-smoke-title">The album was recorded during 2014 at the band's home studio in Las Vegas, Nevada</h3>
-          <p class="Year-smoke-about">Self-produced by members of the band along with English hip-hop producer Alexander Grant, known by his moniker
-            Alex da Kid, the album was released by Interscope Records and Grant's KIDinaKORNER label on February 17, 2015,
+          <h3 class="Year-smoke-title">The album was recorded during 2014 at the band's home studio in Las Vegas,
+            Nevada</h3>
+          <p class="Year-smoke-about">Self-produced by members of the band along with English hip-hop producer
+            Alexander Grant, known by his moniker
+            Alex da Kid, the album was released by Interscope Records and Grant's KIDinaKORNER label on February 17,
+            2015,
             in the United States.</p>
-    </section>
-    <img src="img/disco03.jpg" alt="">
-    </div>
-    </li>
-    </ul>
+          <img src="img/disco03.jpg" alt="">
+        </li>
+      </ul>
     </section>
 
     <section class="concert-tours">
       <header>
         <h2 class="concert-tours-title">Concert Tours</h2>
-        <p class="concert-tours-about">Before the release of Night Visions, Imagine Dragons made appearances on American radio and television to promote
-          their extended play, Continued Silence and debut single It's Time. The band performed "It's Time" on the July 16,
+        <p class="concert-tours-about">Before the release of Night Visions, Imagine Dragons made appearances on
+          American radio and television to promote
+          their extended play, Continued Silence and debut single It's Time. The band performed "It's Time" on the July
+          16,
           2012 airing of NBC late-night talk show The Tonight Show with Jay Leno"</p>
       </header>
       <span class="year-tours">03.08.2015</span>
       <h5 class="concert-tours-smoke">Smoke + Mirrors Tour</h5>
       <h4 class="concert-tours-present">2015-present</h4>
-      <p class="concert-tours-present-about">At Lollapalooza in Sao Paulo, Brazil, the last date on the Into the Night Tour, the band announced a rest, and complemented
-        saying, "This is our last show for a while, and had no better place to end this tour".The conclusion of the Into
-        the Night Tour signaled the end of the Night Visions album cycle. Lead singer Dan Reynolds joked about the end of
-        the Night Visions cycle, saying that "We're always writing on the road, [so] that second album will come, unless
-        we die. next year. Hopefully we don't die and there will be a second album. I don't know when it will be, but it
+      <p class="concert-tours-present-about">At Lollapalooza in Sao Paulo, Brazil, the last date on the Into the Night
+        Tour, the band announced a rest, and complemented
+        saying, "This is our last show for a while, and had no better place to end this tour".The conclusion of the
+        Into
+        the Night Tour signaled the end of the Night Visions album cycle. Lead singer Dan Reynolds joked about the end
+        of
+        the Night Visions cycle, saying that "We're always writing on the road, [so] that second album will come,
+        unless
+        we die. next year. Hopefully we don't die and there will be a second album. I don't know when it will be, but
+        it
         may come"
       </p>
       <a href="#">Buy online</a>
-      </div>
     </section>
 
     <section class="latter-compositions">
       <header>
         <h2 class="latter-compositions-title">Latter Compositions</h2>
-        <p class="latter-compositions-about">"It's Time" was released as the lead single from Continued Silence and It's Time, both extended plays preceding Night
+        <p class="latter-compositions-about">"It's Time" was released as the lead single from Continued Silence and
+          It's Time, both extended plays preceding Night
           Visions' release.
         </p>
       </header>
@@ -122,8 +139,10 @@
           <span class="latter-compositions-year">03.04.2015</span>
           <h5 class="latter-compositions-album">Indian Sammer</h5>
           <h4 class="latter-compositions-songs">Sam Feldt ft. Kimberly Anne - Show Me Love (EDX's Indian Summer Remix)</h4>
-          <p class="latter-compositions-songs-text">Radioactive" is a song recorded by American rock band Imagine Dragons for their major-label debut EP Continued
-            Silence and later on their debut studio album, Night Visions (2012), as the opening track. "Radioactive" was
+          <p class="latter-compositions-songs-text">Radioactive" is a song recorded by American rock band Imagine
+            Dragons for their major-label debut EP Continued
+            Silence and later on their debut studio album, Night Visions (2012), as the opening track. "Radioactive"
+            was
             first sent </p>
           <button class="latter-compositions-button">Visit the iTunes</button>
           <ul class="latter-compositions-icons">
@@ -149,7 +168,8 @@
           <span class="latter-compositions-year">20.07.2015</span>
           <h5 class="latter-compositions-album">Indian Sammer Remix</h5>
           <h4 class="latter-compositions-songs">Sam Feldt - Show Me Love (EDX's Indian Summer Remix)</h4>
-          <p class="latter-compositions-songs-text">Amsterdam's Sam Feldt earned attention in Europe and then worldwide for his melodic house remixes, mixtapes, and
+          <p class="latter-compositions-songs-text">Amsterdam's Sam Feldt earned attention in Europe and then worldwide
+            for his melodic house remixes, mixtapes, and
             collaborations including 2014's "Bloesem" with De Hofnar and "Hot Skin" with Kav Verhouzer on... Dutch </p>
           <button class="latter-compositions-button">Visit the iTunes</button>
           <ul class="latter-compositions-icons">
@@ -176,8 +196,10 @@
           <span class="latter-compositions-year">03.04.2015</span>
           <h5 class="latter-compositions-album">Chill Nation</h5>
           <h4 class="latter-compositions-songs">James Bay - Let It Go (Bearson Remix)</h4>
-          <p class="latter-compositions-songs-text">A soulful singer/songwriter from a small English town with a penchant for crafting moving and evocative folk-pop
-            confections in the vein of Ed Sheeran, Foy Vance, and Ben Howard, James Bay hails from the North Hertf... </p>
+          <p class="latter-compositions-songs-text">A soulful singer/songwriter from a small English town with a
+            penchant for crafting moving and evocative folk-pop
+            confections in the vein of Ed Sheeran, Foy Vance, and Ben Howard, James Bay hails from the North Hertf...
+          </p>
           <button class="latter-compositions-button">Visit the iTunes</button>
           <ul class="latter-compositions-icons">
             <li class="latter-compositions-icons-audio">
@@ -208,8 +230,10 @@
     </section>
 
     <section class="lead-singer">
-      <p class="lead-singer-about">In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at Brigham Young University where they were both students</p>
-      <p class="lead-singer-text">Tolman recruited longtime high school friend Daniel Wayne "Wing" Sermon, who had graduated from Berklee College of
+      <p class="lead-singer-about">In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at Brigham Young
+        University where they were both students</p>
+      <p class="lead-singer-text">Tolman recruited longtime high school friend Daniel Wayne "Wing" Sermon, who had
+        graduated from Berklee College of
         Music. Tolman later recruited his wife, Brittany Tolman, to sing backup and play keys. </p>
       <p class="lead-singer-years">- Early years (2008–10)</p>
       <ul class="lead-singer-songs">
@@ -217,9 +241,12 @@
           <span class="lead-singer-date">03.04.2015</span>
           <p class="lead-singer-album">Chill Nation</p>
           <h4 class="lead-singer-album-title">James Bay - Let It Go (Bearson Remix)</h4>
-          <p class="lead-singer-album-text">A soulful singer/songwriter from a small English town with a penchant for crafting moving and evocative folk-pop
-            confections in the vein of Ed Sheeran, Foy Vance, and Ben Howard, James Bay hails from the North Hertf shire
-            market town of Hitchin. Bay honed his skills regionally, eventually landing high-exposure support slots with
+          <p class="lead-singer-album-text">A soulful singer/songwriter from a small English town with a penchant for
+            crafting moving and evocative folk-pop
+            confections in the vein of Ed Sheeran, Foy Vance, and Ben Howard, James Bay hails from the North Hertf
+            shire
+            market town of Hitchin. Bay honed his skills regionally, eventually landing high-exposure support slots
+            with
           </p>
         </li>
 
@@ -227,7 +254,8 @@
           <span class="lead-singer-date">01.03.2015</span>
           <p class="lead-singer-album">Chill Nation</p>
           <h4 class="lead-singer-album-title">Smoke and Mirrors</h4>
-          <p class="lead-singer-album-text">Hard Rock Cafe teamed with the band, granting them the first ever full access to take control of Hard Rock Cafe's
+          <p class="lead-singer-album-text">Hard Rock Cafe teamed with the band, granting them the first ever full
+            access to take control of Hard Rock Cafe's
             internal video system </p>
         </li>
 
@@ -235,7 +263,8 @@
           <span class="lead-singer-date">04.04.2015</span>
           <p class="lead-singer-album">Chill Nation</p>
           <h4 class="lead-singer-album-title">It Comes Back to You</h4>
-          <p class="lead-singer-album-text">In 2015 a world tour, entitled the Smoke and Mirrors Tour is scheduled in promotion of the world-wide release of
+          <p class="lead-singer-album-text">In 2015 a world tour, entitled the Smoke and Mirrors Tour is scheduled in
+            promotion of the world-wide release of
             Smoke and Mirrors.</p>
         </li>
 
@@ -243,7 +272,8 @@
           <span class="lead-singer-date">01.07.2015</span>
           <p class="lead-singer-album">Chill Nation</p>
           <h4 class="lead-singer-album-title">Let It Go (Bearson Remix)</h4>
-          <p class="lead-singer-album-text">A soulful singer/songwriter from a small English town with a penchant for crafting moving and evocative folk-pop
+          <p class="lead-singer-album-text">A soulful singer/songwriter from a small English town with a penchant for
+            crafting moving and evocative folk-pop
             confections in the vein of Ed Sheeran, Foy Vance, and Ben Howard, James Bay </p>
         </li>
 
@@ -251,8 +281,10 @@
           <span class="lead-singer-date">02.11.2015</span>
           <p class="lead-singer-album">Chill Nation</p>
           <h4 class="lead-singer-album-title">I Don't Mind</h4>
-          <p class="lead-singer-album-text">Hell and Silence is an EP by Las Vegas rock group Imagine Dragons, released in March 2010 in the United States.
-            It was recorded at Battle Born Studios.[1] All songs were written by Imagine Dragons and self-produced. The EP
+          <p class="lead-singer-album-text">Hell and Silence is an EP by Las Vegas rock group Imagine Dragons, released
+            in March 2010 in the United States.
+            It was recorded at Battle Born Studios.[1] All songs were written by Imagine Dragons and self-produced. The
+            EP
             was in part mixed </p>
         </li>
 
@@ -260,34 +292,39 @@
           <span class="lead-singer-date">06.09.2015</span>
           <p class="lead-singer-album">Chill Nation</p>
           <h4 class="lead-singer-album-title">Smoke + Mirrors</h4>
-          <p class="lead-singer-album-text">A soulful singer/songwriter from a small English town with a penchant for crafting moving and </p>
+          <p class="lead-singer-album-text">A soulful singer/songwriter from a small English town with a penchant for
+            crafting moving and </p>
         </li>
       </ul>
     </section>
     <section class="upcoming">
       <header>
         <h2>
-          <img src="img/Upcoming-title.jpg" alt="upcoming events">
         </h2>
         <h3>Smoke + Mirrors Tour</h3>
         <p>2-2-15 Hokukoryokuchi, Konohana Ward, 554-0042 Osaka Prefecture Osaka Japan
         </p>
         <p>01.04.2015</p>
         <h3>Smoke + Mirrors Tour</h3>
-        <p>When the last-minute request is for a focus group, it’s usually a sign that the request originated in Marketing.
-          When Web sites are being designed, the folks in Marketing often feel like they don’t have much clout. Even though
-          they’re the ones who spend the most time trying to figure out who the site’s audience is and what they want, the
-          designers and developers are the ones with most of the hands-on control over how the site actually gets put together.</p>
+        <p>When the last-minute request is for a focus group, it’s usually a sign that the request originated in
+          Marketing.
+          When Web sites are being designed, the folks in Marketing often feel like they don’t have much clout. Even
+          though
+          they’re the ones who spend the most time trying to figure out who the site’s audience is and what they want,
+          the
+          designers and developers are the ones with most of the hands-on control over how the site actually gets put
+          together.</p>
         <p>27.05.2015</p>
       </header>
     </section>
     <section class="history">
       <header>
         <h2>
-          <img src="img/History-title.jpg" alt="history">
         </h2>
-        <p>In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at Brigham Young University where they were both students.Tolman
-          recruited longtime high school friend Daniel Wayne "Wing" Sermon, who had graduated from Berklee College of Music</p>
+        <p>In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at Brigham Young University where they were both
+          students.Tolman
+          recruited longtime high school friend Daniel Wayne "Wing" Sermon, who had graduated from Berklee College of
+          Music</p>
         <ul>
           <li>mar 16</li>
           <li>apr 11</li>
@@ -301,7 +338,6 @@
     <section class="section-contact">
       <header>
         <h2>
-          <img src="img/contact-title.jpg" alt="contact">
         </h2>
         <p>Canada Island, Division No. 23, Unorganized, MB, Canada Tel. +1(778) 288 5180</p>
         <div>
