little fix html issues

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
             United States with Nico Vega and Saint Motel. They also performed at Bite of Las Vegas Festival 2010, New
             Noise
             Music Festival, Neon Reverb Festival, and Fork Fest.</p>
-          <img src="img/disco01.jpg" alt="">
+          <img src="img/disco01.png" alt="">
         </li>
         <li>
           <span class="Year-visions">2012</span>
@@ -82,7 +82,7 @@
             Corps. It was mastered by Joe LaPorta. According to frontman Dan Reynolds, the album took three years to
             finish
             ... of the album's tracks being previously released on multiple EPs. Musically, Night Visions exhibits </p>
-          <img src="img/disco02.jpg" alt="">
+          <img src="img/disco02.png" alt="">
         </li>
         <li>
           <span class="Year-smoke">2015</span>
@@ -94,7 +94,7 @@
             Alex da Kid, the album was released by Interscope Records and Grant's KIDinaKORNER label on February 17,
             2015,
             in the United States.</p>
-          <img src="img/disco03.jpg" alt="">
+          <img src="img/disco03.png" alt="">
         </li>
       </ul>
     </section>
