--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,9 @@
     </div>
   </header>
   <main>
-    <section class="discography">
+    <section class="discography container">
       <header>
-        <h2 class="discography-title">discography</h2>
+        <h2 class="discography-title title-h2">discography</h2>
         <p class="discography-about">September 4 world heard Night Visions, the first full album. He reached the 2
           position in the chart Billboard 200.
           The single «It's Time» took 22 th place in the Billboard Hot 100, 4th in the Billboard Alternative and
@@ -53,7 +53,7 @@
       </header>
       <ul class="disco-list container">
         <li>
-          <span class="Year-hell">2010</span>
+          <span class="Year-hell year">2010</span>
           <h5 class="Hell-silence">Hell and Silence</h5>
           <h3 class="Hell-silence-title">Hell and Silence is an EP by Las Vegas rock group</h3>
           <p class="Hell-silence-about">Hell and Silence is an EP by Las Vegas rock group , released in March 2010 in
@@ -67,10 +67,10 @@
             United States with Nico Vega and Saint Motel. They also performed at Bite of Las Vegas Festival 2010, New
             Noise
             Music Festival, Neon Reverb Festival, and Fork Fest.</p>
-          <img src="img/disco01.png" alt="">
+          <img src="img/disco01.png" alt="" class="play">
         </li>
         <li>
-          <span class="Year-visions">2012</span>
+          <span class="Year-visions year">2012</span>
           <h5 class="Nihgt-visions">Night Visions</h5>
           <h3 class="Nihgt-visions-title">Night Visions is the debut studio album by American rock band</h3>
           <p class="Nihgt-visions-about">It was released on September 4, 2012 through Interscope Records. The extended
@@ -82,10 +82,10 @@
             Corps. It was mastered by Joe LaPorta. According to frontman Dan Reynolds, the album took three years to
             finish
             ... of the album's tracks being previously released on multiple EPs. Musically, Night Visions exhibits </p>
-          <img src="img/disco02.png" alt="">
+          <img src="img/disco02.png" alt="" class="play">
         </li>
         <li>
-          <span class="Year-smoke">2015</span>
+          <span class="Year-smoke year">2015</span>
           <h5 class="Year-smoke-mirrors">Smoke + Mirrors</h5>
           <h3 class="Year-smoke-title">The album was recorded during 2014 at the band's home studio in Las Vegas,
             Nevada</h3>
@@ -94,14 +94,14 @@
             Alex da Kid, the album was released by Interscope Records and Grant's KIDinaKORNER label on February 17,
             2015,
             in the United States.</p>
-          <img src="img/disco03.png" alt="">
+          <img src="img/disco03.png" alt="" class="play">
         </li>
       </ul>
     </section>
 
     <section class="concert-tours">
       <header>
-        <h2 class="concert-tours-title">Concert Tours</h2>
+        <h2 class="concert-tours-title title-h2">Concert Tours</h2>
         <p class="concert-tours-about">Before the release of Night Visions, Imagine Dragons made appearances on
           American radio and television to promote
           their extended play, Continued Silence and debut single It's Time. The band performed "It's Time" on the July
@@ -128,7 +128,7 @@
 
     <section class="latter-compositions">
       <header>
-        <h2 class="latter-compositions-title">Latter Compositions</h2>
+        <h2 class="latter-compositions-title title-h2">Latter Compositions</h2>
         <p class="latter-compositions-about">"It's Time" was released as the lead single from Continued Silence and
           It's Time, both extended plays preceding Night
           Visions' release.
