--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
       </div>
     </section>
 
-    <section class="latter-compositions">
+    <section class="latter-compositions container">
       <header>
         <h2 class="latter-compositions-title title-h2">Latter Compositions</h2>
         <p class="latter-compositions-about">"It's Time" was released as the lead single from Continued Silence and
@@ -166,6 +166,7 @@
               <span class="icons-speech-descr">96</span>
             </li>
           </ul>
+          <img src="img/latter01.jpg" alt="">
         </li>
         <li class="latter-compositions-item">
           <span class="latter-compositions-year">20.07.2015</span>
@@ -194,6 +195,7 @@
               <span class="icons-speech-descr">23</span>
             </li>
           </ul>
+          <img src="img/latter02.jpg" alt="">
         </li>
 
         <li class="latter-compositions-item">
@@ -223,6 +225,7 @@
               <span class="icons-speech-descr">96</span>
             </li>
           </ul>
+          <img src="img/latter03.jpg" alt="">
         </li>
       </ul>
     </section>
