реструктуризация проекта, замена классов,

--- a/src/index.html
+++ b/src/index.html
@@ -12,39 +12,41 @@
 
 <body>
   <header class="header-main">
-    <div class="pre-menu">
-      <ul class="header-menu container">
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#about" target="_self">about</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#discography" target="_self">discigraphy</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#concert" target="_self">concert trips</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#latter" target="_self">latter compositions</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#new-track" target="_self">new tracks</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#upcoming" target="_self">upcoming events</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#history" target="_self">history</a>
-        </li>
-        <li class="header-menu-list">
-          <a class="header-menu-item" href="#contact" target="_self">contact</a>
-        </li>
-      </ul>
-    </div>
-    <div class="logo container"></div>
+    <nav>
+      <div class="pre-menu">
+        <ul class="header-menu container">
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#about" target="_self">about</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#discography" target="_self">discigraphy</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#concert" target="_self">concert trips</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#latter" target="_self">latter compositions</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#new-track" target="_self">new tracks</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#upcoming" target="_self">upcoming events</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#history" target="_self">history</a>
+          </li>
+          <li class="header-menu-list">
+            <a class="header-menu-item" href="#contact" target="_self">contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="logo container"></div>
+    </nav>
   </header>
   <main>
-    <section class="discography">
-      <header class="container">
+    <section class="discography container">
+      <header class="">
         <h2 class="discography-title title-h2">discography</h2>
         <p class="discography-about">September 4 world heard Night Visions, the first full album. He reached
           the 2
@@ -53,44 +55,41 @@
           Billboard
           Rock, and now went platinum.</p>
       </header>
-      <ul class="disco-list list container">
+      <ul class="disco-list">
         <li class="disco-list-item">
-          <span class="Year-hell year">2010</span>
-          <h5 class="Hell-silence disco-h5">Hell and Silence</h5>
-          <h3 class="Hell-silence-title disco-h3">Hell and Silence is an EP by Las Vegas rock group</h3>
-          <p class="Hell-silence-about disco-p">Hell and Silence is an EP by Las Vegas rock group , released in March
+          <span class="article-year">2010</span>
+          <h5 class="pre-title">Hell and Silence</h5>
+          <h3 class="article-title">Hell and Silence is an EP by Las Vegas rock group</h3>
+          <p class="article-text">Hell and Silence is an EP by Las Vegas rock group , released in March
             2010 in the United States. It was recorded at Battle Born Studios. All songs were written by Imagine
             Dragons and self-produced. They also toured the western The EP was in part mixed by Grammy nominated
             engineer Mark Needham. To promote the album the band performed five shows at SXSW 2010 including at the BMI
-            Official Showcase.While at SXSW
-            they were endorsed by Blue Microphones. They also toured the western United States with Nico Vega and Saint
+            Official Showcase.While at SXSW they were endorsed by Blue Microphones. They also toured the western United
+            States with Nico Vega and Saint
             Motel. They also performed at Bite of Las Vegas Festival 2010, New Noise Music Festival, Neon Reverb
             Festival, and Fork Fest.</p>
           <img src="img/disco01.png" alt="" class="play">
         </li>
         <li class="disco-list-item">
-          <span class="Year-visions year">2012</span>
-          <h5 class="Nihgt-visions disco-h5">Night Visions</h5>
-          <h3 class="Nihgt-visions-title disco-h3">Night Visions is the debut studio album by American rock
+          <span class="article-year">2012</span>
+          <h5 class="pre-title">Night Visions</h5>
+          <h3 class="article-title">Night Visions is the debut studio album by American rock
             band</h3>
-          <p class="Nihgt-visions-about disco-p">It was released on September 4, 2012 through Interscope Records. The
-            extended
-            track was released on February
-            12, 2013, adding three more songs. Recorded between 2010 and 2012, the album was primarily produced by the
+          <p class="article-text">It was released on September 4, 2012 through Interscope Records. The
+            extended track was released on February 12, 2013, adding three more songs. Recorded between 2010 and 2012,
+            the album was primarily produced by the
             band themselves, as well as English hip-hop producer Alex da Kid and Brandon Darner from the American indie
             rock group The Envy Corps. It was mastered by Joe LaPorta. According to frontman Dan Reynolds, the album
-            took
-            three years to finish ... </p>
+            took three years to finish ... </p>
           <img src="img/disco02.png" alt="" class="play">
         </li>
         <li class="">
-          <span class="Year-smoke year">2015</span>
-          <h5 class="Year-smoke-mirrors disco-h5">Smoke + Mirrors</h5>
-          <h3 class="Year-smoke-title disco-h3">The album was recorded during 2014 at the band's home studio in Las
-            Vegas,
-            Nevada
+          <span class="article-year">2015</span>
+          <h5 class="pre-title">Smoke + Mirrors</h5>
+          <h3 class="article-title">The album was recorded during 2014 at the band's home studio in Las
+            Vegas, Nevada
           </h3>
-          <p class="Year-smoke-about disco-p">Self-produced by members of the band along with English hip-hop producer
+          <p class="article-text">Self-produced by members of the band along with English hip-hop producer
             Alexander Grant, known by his moniker
             Alex da Kid, the album was released by Interscope Records and Grant's KIDinaKORNER label on February 17,
             2015,
@@ -100,8 +99,8 @@
       </ul>
     </section>
 
-    <section class="concert-tours">
-      <header class="concert-tours-head container">
+    <section class="concert-tours container">
+      <header class="concert-tours-head">
         <h2 class="concert-tours-title title-h2">Concert Tours</h2>
         <p class="concert-tours-about">Before the release of Night Visions, Imagine Dragons made appearances on
           American radio and television to promote
@@ -109,10 +108,10 @@
           16, 2012 airing of NBC late-night talk show The Tonight Show with Jay Leno"</p>
       </header>
       <div class="half-container">
-        <span class="year-tours year">03.08.2015</span>
-        <h5 class="concert-tours-smoke disco-h5">Smoke + Mirrors Tour</h5>
-        <h4 class="concert-tours-present disco-h3">2015-present</h4>
-        <p class="concert-tours-present-about disco-p">At Lollapalooza in Sao Paulo, Brazil, the last date on the Into
+        <span class="article-year">03.08.2015</span>
+        <h5 class="pre-title concert-tours-smoke">Smoke + Mirrors Tour</h5>
+        <h4 class="article-title">2015-present</h4>
+        <p class="article-text">At Lollapalooza in Sao Paulo, Brazil, the last date on the Into
           the Night
           Tour, the band announced a rest, and complemented
           saying, "This is our last show for a while, and had no better place to end this tour".The conclusion of the
