classes of html -2

--- a/src/index.html
+++ b/src/index.html
@@ -412,7 +412,8 @@
                     name="email"
                     id=""
                     placeholder="E mail"
-                    required />
+                    required
+                  />
                 </li>
                 <li class="signup-form-item">
                   <textarea
@@ -421,7 +422,8 @@
                     cols="30"
                     rows="10"
                     placeholder="Message"
-                  /></li>
+                  ></textarea>
+                </li>
               </ul>
               <button type="submit" class="button-form">Send</button>
             </form>
