+burger, img changes, svg fail

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,6 @@
 
   <body>
     <header class="header-main">
-       
-      <!--test Mariia-->
-
       <nav class="nav-head">
         <div class="pre-menu">
           <ul class="header-menu container">
@@ -91,7 +88,7 @@
               Festival 2010, New Noise Music Festival, Neon Reverb Festival, and
               Fork Fest.
             </p>
-            <img src="img/disco01.png" alt="" class="play" />
+            <button type="button" class="play disco01">play</button>
           </li>
           <li class="disco-list-item">
             <span class="article-year">2012</span>
@@ -109,7 +106,7 @@
               According to frontman Dan Reynolds, the album took three years to
               finish ...
             </p>
-            <img src="img/disco02.png" alt="" class="play" />
+            <button type="button" class="play disco02">play</button>
           </li>
           <li class="">
             <span class="article-year">2015</span>
@@ -124,7 +121,7 @@
               album was released by Interscope Records and Grant's KIDinaKORNER
               label on February 17, 2015, in the United States.
             </p>
-            <img src="img/disco03.png" alt="" class="play" />
+            <button type="button" class="play disco03">play</button>
           </li>
         </ul>
       </section>
@@ -190,7 +187,6 @@
                 </button>
                 <ul class="latter-compositions-icons list">
                   <li class="latter-compositions-icons icons-audio">
-                    <a href="#"></a>
                     <span class="icons-audio-descr">182,364</span>
                   </li>
                   <li class="latter-compositions-icons icons-heart">
@@ -287,15 +283,63 @@
         <section class="slider">
 
 
+
+
+
+
+
+
+
+
+
+
+
+
           <h3></h3>
 
 
 
-          <p></p>
+
+
+
+
+
+
+
+
+
 
 
 
           <p></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <p></p>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -303,7 +347,7 @@
       -->
 
       <section class="lead-singer">
-        <header class="lead-singer-slider">
+        <header class="lead-singer-slider container">
           <div class="slider-descr">
             <p class="lead-singer-about">
               In 2008, lead singer Dan Reynolds met <br />
@@ -323,7 +367,7 @@
           <li class="lead-singer-item">
             <img
               class="lead-singer-image"
-              src="../src/img/newtrack01.jpg"
+              src="img/newtrack01.jpg"
               alt=""
               width="384"
               height="422"
@@ -346,7 +390,7 @@
 
           <li class="lead-singer-item">
             <img
-              src="../src/img/newtrack02.jpg"
+              src="img/newtrack02.jpg"
               alt=""
               width="384"
               height="422"
@@ -365,7 +409,7 @@
 
           <li class="lead-singer-item">
             <img
-              src="../src/img/newtrack03.jpg"
+              src="img/newtrack03.jpg"
               alt=""
               width="384"
               height="422"
@@ -384,7 +428,7 @@
 
           <li class="lead-singer-item">
             <img
-              src="../src/img/newtrack04.jpg"
+              src="img/newtrack04.jpg"
               alt=""
               width="384"
               height="422"
@@ -403,7 +447,7 @@
 
           <li class="lead-singer-item">
             <img
-              src="../src/img/newtrack05.jpg"
+              src="img/newtrack05.jpg"
               alt=""
               width="384"
               height="422"
@@ -423,7 +467,7 @@
 
           <li class="lead-singer-item">
             <img
-              src="../src/img/newtrack06.jpg"
+              src="img/newtrack06.jpg"
               alt=""
               width="384"
               height="422"
