--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,14 @@
 
   <body>
     <header class="header-main">
+
+      <!-- test Mariia-->
+      
       <nav class="nav-head">
         <div class="pre-menu">
+          <div class="svg">
+            <img src="img/svg/Heart - full.svg">
+          </div>
           <ul class="header-menu container">
             <li class="header-menu-list">
               <a class="header-menu-item" href="#about" target="_self">about</a>
