--- a/src/index.html
+++ b/src/index.html
@@ -389,12 +389,7 @@
           </li>
 
           <li class="lead-singer-item">
-            <img
-              src="img/newtrack02.jpg"
-              alt=""
-              width="384"
-              height="422"
-            />
+            <img src="img/newtrack02.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.03.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -408,12 +403,7 @@
           </li>
 
           <li class="lead-singer-item">
-            <img
-              src="img/newtrack03.jpg"
-              alt=""
-              width="384"
-              height="422"
-            />
+            <img src="img/newtrack03.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">04.04.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -427,12 +417,7 @@
           </li>
 
           <li class="lead-singer-item">
-            <img
-              src="img/newtrack04.jpg"
-              alt=""
-              width="384"
-              height="422"
-            />
+            <img src="img/newtrack04.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.07.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -446,12 +431,7 @@
           </li>
 
           <li class="lead-singer-item">
-            <img
-              src="img/newtrack05.jpg"
-              alt=""
-              width="384"
-              height="422"
-            />
+            <img src="img/newtrack05.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">02.11.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -466,12 +446,7 @@
           </li>
 
           <li class="lead-singer-item">
-            <img
-              src="img/newtrack06.jpg"
-              alt=""
-              width="384"
-              height="422"
-            />
+            <img src="img/newtrack06.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">06.09.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -486,15 +461,15 @@
       </section>
       <section class="upcoming">
         <header class="upcoming-head">
-          <h2 class="upcoming-title">Upcoming</h2>
+          <h2 class="upcoming-title">Upcoming Events</h2>
           <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
-          <p class="upcoming-text">
-            2-2-15 Hokukoryokuchi, Konohana Ward, 554-0042 Osaka Prefecture
-            Osaka Japan
+          <p class="upcoming-adress">
+            2-2-15 Hokukoryokuchi, Konohana Ward,<br />
+            554-0042 Osaka Prefecture Osaka
           </p>
           <p class="upcoming-date">01.04.2015</p>
           <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
-          <p class="upcoming-text">
+          <p class="upcoming-descr">
             When the last-minute request is for a focus group, it’s usually a
             sign that the request originated in Marketing. When Web sites are
             being designed, the folks in Marketing often feel like they don’t
@@ -503,9 +478,10 @@
             want, the designers and developers are the ones with most of the
             hands-on control over how the site actually gets put together.
           </p>
-          <p class="upcoming-date">27.05.2015</p>
+          <p class="upcoming-date-next">27.05.2015</p>
         </header>
       </section>
+
       <section class="history">
         <header class="history-head">
           <h2 class="history-title">History</h2>
