--- a/src/index.html
+++ b/src/index.html
@@ -486,10 +486,12 @@
         <header class="history-head">
           <h2 class="history-title">History</h2>
           <p class="history-text">
-            In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at
+            In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at<br />
             Brigham Young University where they were both students.Tolman
-            recruited longtime high school friend Daniel Wayne "Wing" Sermon,
-            who had graduated from Berklee College of Music
+            recruited<br />
+            longtime high school friend Daniel Wayne "Wing" Sermon, who had
+            <br />
+            graduated from Berklee College of Music
           </p>
           <ul class="history-list">
             <li class="history-list-date">mar 16</li>
